exports[`test render add mode 1`] = `
<span
  className="bBeLnM"
  onClick={undefined}
  type="add">
  Assign
</span>
`;

exports[`test render remove mode 1`] = `
<span
  className="VehbQ"
  onClick={undefined}
  type="remove">
  Un-Assign
</span>
`;
